# project-hex

./: .gitignore  Cargo.toml  README.md  TODO.md  TODO.txt  shell.nix
assets/: Tile.glb
assets/tiles/: blueTile.glb  coastalTile.glb  desertTile.glb  grasslandTile.glb  greenTile.glb  oceanTile.glb  snowTile.glb  steppeTile.glb  whiteTile.glb  yellowTile.glb
src/: camera.rs  hexGrid.rs  hex_grid.rs  lib.rs  main.rs  map.rs  tile.rs  wave_function.rs  world.rs
src/common/: mod.rs
src/components/: hex_pos.rs  mod.rs  scaffold.rs  states.rs  tile.rs  tile_bundle.rs  wave_func.rs
src/events/: build_path_event.rs  mod.rs  movement_event.rs  pickable_spawn_event.rs  tile_spawn_event.rs  unit_spawn_event.rs
src/mapgen/: map.rs  mod.rs
src/plugins/: boot_plugin.rs  camera_plugin.rs  combat_plugin.rs  debug_plugin.rs  events_plugin.rs  game_start_plugin.rs  map_plugin.rs  map_plugin_v2.rs  mod.rs  movement_plugin.rs  resources_plugin.rs  selection_plugin.rs  stage_setting_plugin.rs  states_plugin.rs  ui_plugin.rs  world_plugin.rs
src/resources/: asset_handles.rs  land_traversability_map.rs  map.rs  map_parameters.rs  map_resources.rs  mod.rs  pickable_buffers.rs  pickable_deques.rs  pos_neighbors_map.rs  selection_focus.rs  tile_socket_maps.rs  traversability_maps.rs
src/states/: app_state.rs  assets_state.rs  boot_state.rs  game_state.rs  mod.rs  pickable_buffers_state.rs
src/systems/: generate_map.rs  mod.rs  spawn_light.rs  translate_camera.rs  wave_func_collapse.rs  zoom_camera.rs
src/utils/: coord_conversions.rs  get_ancestor.rs  get_top_parent.rs  mod.rs
(+292 files in other folders)
